<resources>

    <string name="app_name">My First App</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_edit_contacts">EditContacts</string>
    <string name="title_activity_contacts_page">ContactsPage</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_new_user">NewUser</string>
    <string name="title_activity_search">Search</string>
    <string name="intro"> Contacts</string>
    <string name="newContact"> New Contact</string>
    <string name="userName"> Username</string>
    <string name="phone"> Phone</string>
    <string name="email"> Email</string>
    <string name="address">Address</string>
    <string name="pass"> Password</string>
    <string name="userMsg">New to MyContacts? Create an account</string>
    <string name="welcome">Welcome</string>
    <string name="login"> Login</string>
    <string name="done"> Done!</string>
    <string name="fav"> Favorites</string>
    <string name="search"> Search</string>
    <string name="dltContact"> Delete Contact</string>
    <string name="hello_world">Hello world!</string>

</resources>