<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10dip" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dip"
        android:layout_weight="0.17" >

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#00000000"
            android:src="@drawable/return_icon" />

        <TextView
            android:id="@+id/displayName"
            android:layout_marginBottom="20dip" 
            android:layout_marginLeft="20dip"                              
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/newContact"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="30sp" />

        <ImageButton
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#00000000"
            android:src="@drawable/save_icon" />

    </LinearLayout>

    <TextView
        android:id="@+id/usernameView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/userName"
        android:textColor="#372c24" />

    <EditText
        android:id="@+id/txtName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dip"
        android:layout_marginTop="5dip"
        android:inputType="textPersonName"
        android:singleLine="true" />

    <TextView
        android:id="@+id/phoneView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/phone"
        android:textColor="#372c24" />

    <EditText
        android:id="@+id/txtPhoneNum"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dip"
        android:layout_marginTop="5dip"
        android:inputType="phone"
        android:singleLine="true" />

    <TextView
        android:id="@+id/emailView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textColor="#372c24" />

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dip"
        android:layout_marginTop="5dip"
        android:inputType="textEmailAddress"
        android:singleLine="true" />

    <TextView
        android:id="@+id/addressView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/address"
        android:textColor="#372c24" />

    <EditText
        android:id="@+id/txtAddress"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dip"
        android:layout_marginTop="5dip"
        android:layout_weight="0.17"
        android:ems="10"
        android:inputType="textPostalAddress"
        android:singleLine="true" />

    <Button
        android:id="@+id/btnDone"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
    	android:background="@drawable/custombutton"
        android:text="@string/dltContact" />

</LinearLayout>