<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10dip" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dip" >

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:src="@drawable/return_icon" />

        <TextView
            android:id="@+id/displayName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_marginLeft="50dip"
            android:textSize="30sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/usernameView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/userName"
        android:textColor="#372c24" />

    <EditText
        android:id="@+id/txtName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dip"
        android:layout_marginTop="5dip"
        android:inputType="textPersonName"
        android:singleLine="true" />

    <TextView
        android:id="@+id/passView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/pass"
        android:textColor="#372c24" />

    <EditText
        android:id="@+id/txtPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.00"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnDone"
        style="@style/custom_text"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:layout_marginLeft="50dip"
        android:background="@drawable/custombutton"
        android:text="@string/done" />

</LinearLayout>